--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "http://abhayshah3017.github.io/Portfolio",
+  "homepage": "https://abhayshah.netlify.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
